# pdf-generator

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: config.py  handlers.py  helpers.py  main.py  ports.py  routers.py  schemas.py
tests/: test_generate_pdf.py
