[tool.poetry]
name = "pdf generator"
version = "0.1.0"
description = "Service to generate a pdf from an HTML template"
authors = ["Gabriel H. Amaya Pat <g.h.a.p.1.6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
mangum = "^0.15.0"
Jinja2 = "^3.1.2"
weasyprint = "^55.0"
boto3 = "^1.24.10"
uvicorn = {extras = ["standard"], version = "^0.17.6"}


[tool.poetry.group.dev.dependencies]
pylint = "^2.14.2"
mypy = "^0.961"
ipdb = "^0.13.9"
black = "^22.3.0"
pytest = "^7.1.2"
isort = "^5.10.1"
requests = "^2.28.0"
mock = "^4.0.3"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 79

[tool.black]
line_length = 79

[tool.flake8]
max-line-length = 79
ignore = "E226,E302,E41"
max-complexity = 10
